<resources>
    <string name="app_name">stayAwake</string>
    <string name="get_started_button">Get Started</string>
    <string name="terms_and_privacy">By continuing, you agree to our Terms of Service\nand Privacy Policy</string>
    <string name="continue_button">Continue</string>
    <string name="login_button">Login</string>
    <string name="label_full_name">Full Name</string>
    <string name="hint_input_email">Enter your email address</string>
    <string name="hint_input_password">Enter your password</string>
    <string name="hint_input_full_name">Enter your full name</string>
    <string name="label_job_title">Job Title</string>
    <string name="hint_input_job_title">Enter your job title</string>
    <string name="label_address">Address</string>
    <string name="hint_input_address">Enter your address</string>
    <string name="label_date_of_birth">Date of Birth</string>
    <string name="label_required">*</string>
    <string name="hint_input_date_of_birth">Select a date</string>
    <string name="label_blood_type">Blood Type</string>
    <string name="hint_blood_type">A/B/AB/O</string>
    <string name="label_place_of_birth">Place of Birth</string>
    <string name="hint_input_place_of_birth">Enter your place of birth</string>
    <string name="label_phone_number">Phone Number</string>
    <string name="hint_input_phone_number">Enter your phone number</string>
    <string name="label_gender">Gender</string>
    <string name="label_company_logo">Company Logo</string>
    <string name="label_company_name">Company Name</string>
    <string name="hint_input_company_name">Enter your company name</string>
    <string name="label_business_field">Business Field</string>
    <string name="hint_input_business_field">Select your business field</string>
    <string name="change_button">Change</string>
    <string name="delete_button">Delete</string>
    <string name="label_password">Password</string>
    <string name="register_button">Register</string>
    <string name="label_password_confirmation">Password Confirmation</string>
    <string name="hint_input_password_confirmation">Enter your password confirmation</string>
    <string name="hint_input_referral_code">Enter your referral code here</string>
    <string name="verify_button">Verify</string>
    <string name="hint_input_search_business_field">Search your business field</string>
    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>



    <string name="login_expression">Welcome to StayAwake</string>
    <string name="message_login">Akun berhasil masuk</string>
    <string name="next">Lanjut</string>

    <string name="fail_expression">Login Gagal</string>
    <string name="invalid_email">Email tidak valid</string>

    <string name="register_success">Daftar Akun Berhasil !</string>
    <string name="message_create_acc">Akun sudah bisa digunakan,silahkan masuk !</string>



</resources>